--- a/DH-PortoSeguro/Blog Pessoal - Angular/blogPessoal/src/app/app.component.html
+++ b/DH-PortoSeguro/Blog Pessoal - Angular/blogPessoal/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-menu></app-menu>
 <app-rodape></app-rodape>
+<app-cadastrar></app-cadastrar>
+<app-entrar></app-entrar>
+<router-outlet></router-outlet>
