--- a/DH-PortoSeguro/Blog Pessoal - Angular/blogPessoal/src/app/rodape/rodape.component.html
+++ b/DH-PortoSeguro/Blog Pessoal - Angular/blogPessoal/src/app/rodape/rodape.component.html
@@ -9,9 +9,9 @@
       </div>
   
       <div class="row">
-        <div class="col-md-12 d-flex justify-content-center">
+        <div class="d-flex justify-content-center">
   
-          <ul class="social-network" >
+          <ul class="social-network " >
             <li >
               <a href="https://www.facebook.com/digitalhousebrasil/" target="_blank" class="icoFacebook" style="margin: 0 15px;">
                 <i class="fa fa-facebook-square" aria-hidden="true"></i>
@@ -36,7 +36,7 @@
     </div>
   
     <div class="footer-copyright bg-dark text-center py-3">
-      <span class="text-light"> © 2020 Copyright: Renata </span>
+      <span class="text-light"> © 2020 Copyright: </span>
       <a class="text-light" target="_blank" href="https://www.digitalhouse.com/">brasil.digitalhouse.com</a>
     </div>
   
